--- a/requirements.txt
+++ b/requirements.txt
@@ -1,254 +1,141 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-arm64
-# created-by: conda 24.9.2
-aiofiles=22.1.0=py311hca03da5_0
-aiohappyeyeballs=2.4.0=py311hca03da5_0
-aiohttp=3.10.5=py311h80987f9_0
-aiosignal=1.2.0=pyhd3eb1b0_0
-annotated-types=0.7.0=pypi_0
-anyio=4.6.2=py311hca03da5_0
-aom=3.9.1=h7bae524_0
-appnope=0.1.2=py311hca03da5_1001
-argon2-cffi=21.3.0=pyhd3eb1b0_0
-argon2-cffi-bindings=21.2.0=py311h80987f9_0
-asttokens=2.0.5=pyhd3eb1b0_0
-async-lru=2.0.4=py311hca03da5_0
-attrs=24.2.0=py311hca03da5_0
-babel=2.11.0=py311hca03da5_0
-beautifulsoup4=4.12.3=py311hca03da5_0
-bleach=4.1.0=pyhd3eb1b0_0
-brotli=1.1.0=hd74edd7_2
-brotli-bin=1.1.0=hd74edd7_2
-brotli-python=1.0.9=py311h313beb8_8
-brotlicffi=1.0.9.2=py311ha397e9f_3
-bzip2=1.0.8=h80987f9_6
-ca-certificates=2024.9.24=hca03da5_0
-cachetools=5.3.3=py311hca03da5_0
-cairo=1.18.0=hd1e100b_0
-certifi=2024.8.30=py311hca03da5_0
-cffi=1.17.1=py311h3eb5a62_0
-charset-normalizer=3.3.2=pyhd3eb1b0_0
-comm=0.2.1=py311hca03da5_0
-cryptography=43.0.0=py311hd4332d6_0
-cyrus-sasl=2.1.28=h9131b1a_1
-dav1d=1.2.1=h80987f9_0
-debugpy=1.6.7=py311h313beb8_0
-decorator=5.1.1=pyhd3eb1b0_0
-defusedxml=0.7.1=pyhd3eb1b0_0
-executing=0.8.3=pyhd3eb1b0_0
-expat=2.6.3=h313beb8_0
-ffmpeg=7.0.1=gpl_hc16618e_100
-font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
-font-ttf-inconsolata=2.001=hcb22688_0
-font-ttf-source-code-pro=2.030=hd3eb1b0_0
-font-ttf-ubuntu=0.83=h8b1ccd4_0
-fontconfig=2.14.2=h82840c6_0
-fonts-anaconda=1=h8fa9717_0
-fonts-conda-ecosystem=1=hd3eb1b0_0
-freetype=2.12.1=h1192e45_0
-fribidi=1.0.10=h1a28f6b_0
-frozenlist=1.4.0=py311h80987f9_0
-gettext=0.22.5=h8414b35_3
-gettext-tools=0.22.5=h8414b35_3
-glib=2.80.2=h535f939_0
-glib-tools=2.80.2=h4c882b9_0
-gmp=6.3.0=h7bae524_2
-gnutls=3.7.9=hd26332c_0
-google-ai-generativelanguage=0.6.10=pyhd8ed1ab_0
-google-api-core=2.19.1=py311hca03da5_0
-google-api-python-client=2.149.0=pypi_0
-google-auth=2.29.0=py311hca03da5_0
-google-auth-httplib2=0.2.0=pypi_0
-google-generativeai=0.8.3=pypi_0
-googleapis-common-protos=1.63.2=py311hca03da5_0
-graphite2=1.3.14=hc377ac9_1
-greenlet=3.0.3=pypi_0
-grpcio=1.67.0=pypi_0
-grpcio-status=1.67.0=pypi_0
-gst-plugins-base=1.14.1=h313beb8_1
-gstreamer=1.14.1=h80987f9_1
-h11=0.14.0=py311hca03da5_0
-harfbuzz=8.5.0=h1836168_0
-httpcore=1.0.2=py311hca03da5_0
-httplib2=0.22.0=pypi_0
-httpx=0.27.0=py311hca03da5_0
-icu=73.2=hc8870d7_0
-idna=3.7=py311hca03da5_0
-ipykernel=6.29.5=py311hca03da5_0
-ipython=8.27.0=py311hca03da5_0
-ipywidgets=8.1.2=py311hca03da5_0
-jedi=0.19.1=py311hca03da5_0
-jinja2=3.1.4=py311hca03da5_0
-jpeg=9e=h80987f9_3
-json5=0.9.6=pyhd3eb1b0_0
-jsonschema=4.23.0=py311hca03da5_0
-jsonschema-specifications=2023.7.1=py311hca03da5_0
-jupyter=1.0.0=py311hca03da5_9
-jupyter-lsp=2.2.0=py311hca03da5_0
-jupyter_client=8.6.0=py311hca03da5_0
-jupyter_console=6.6.3=py311hca03da5_0
-jupyter_core=5.7.2=py311hca03da5_0
-jupyter_events=0.10.0=py311hca03da5_0
-jupyter_server=2.14.1=py311hca03da5_0
-jupyter_server_terminals=0.4.4=py311hca03da5_1
-jupyterlab=4.2.5=py311hca03da5_0
-jupyterlab_pygments=0.1.2=py_0
-jupyterlab_server=2.27.3=py311hca03da5_0
-jupyterlab_widgets=3.0.10=py311hca03da5_0
-krb5=1.20.1=hf3e1bf2_1
-lame=3.100=h1a28f6b_0
-libabseil=20240116.2=cxx17_h313beb8_0
-libasprintf=0.22.5=h8414b35_3
-libasprintf-devel=0.22.5=h8414b35_3
-libass=0.17.1=hf7da4fe_1
-libbrotlicommon=1.1.0=hd74edd7_2
-libbrotlidec=1.1.0=hd74edd7_2
-libbrotlienc=1.1.0=hd74edd7_2
-libclang=14.0.6=default_h1b80db6_1
-libclang13=14.0.6=default_h24352ff_1
-libcxx=19.1.2=ha82da77_0
-libedit=3.1.20230828=h80987f9_0
-libexpat=2.6.3=hf9b8971_0
-libffi=3.4.4=hca03da5_1
-libgettextpo=0.22.5=h8414b35_3
-libgettextpo-devel=0.22.5=h8414b35_3
-libglib=2.80.2=h535f939_0
-libhwloc=2.11.1=default_h7685b71_1000
-libiconv=1.17=h0d3ecfb_2
-libidn2=2.3.4=h80987f9_0
-libintl=0.22.5=h8414b35_3
-libintl-devel=0.22.5=h8414b35_3
-libllvm14=14.0.6=h19fdd8a_4
-libopenvino=2024.1.0=h5c9529b_7
-libopenvino-arm-cpu-plugin=2024.1.0=h5c9529b_7
-libopenvino-auto-batch-plugin=2024.1.0=hcd65546_7
-libopenvino-auto-plugin=2024.1.0=hcd65546_7
-libopenvino-hetero-plugin=2024.1.0=h88cb26a_7
-libopenvino-ir-frontend=2024.1.0=h88cb26a_7
-libopenvino-onnx-frontend=2024.1.0=h32b5460_7
-libopenvino-paddle-frontend=2024.1.0=h32b5460_7
-libopenvino-pytorch-frontend=2024.1.0=h00cdb27_7
-libopenvino-tensorflow-frontend=2024.1.0=h2741c3b_7
-libopenvino-tensorflow-lite-frontend=2024.1.0=h00cdb27_7
-libopus=1.3.1=h80987f9_1
-libpng=1.6.39=h80987f9_0
-libpq=12.17=h02f6b3c_0
-libprotobuf=4.25.3=h514c7bf_0
-libsodium=1.0.18=h1a28f6b_0
-libsqlite=3.46.0=hfb93653_0
-libtasn1=4.19.0=h80987f9_0
-libunistring=0.9.10=h1a28f6b_0
-libuv=1.48.0=h80987f9_0
-libvpx=1.14.1=h7bae524_0
-libxml2=2.13.1=h0b34f26_2
-libzlib=1.2.13=hfb2fe0b_6
-llvm-openmp=14.0.6=hc6e5704_0
-lz4-c=1.9.4=h313beb8_1
-markupsafe=2.1.3=py311h80987f9_0
-matplotlib-inline=0.1.6=py311hca03da5_0
-mistune=2.0.4=py311hca03da5_0
-multidict=6.0.4=py311h80987f9_0
-mutagen=1.47.0=pyhd8ed1ab_0
-mysql=5.7.24=ha71a6ea_2
-nbclient=0.8.0=py311hca03da5_0
-nbconvert=7.16.4=py311hca03da5_0
-nbformat=5.10.4=py311hca03da5_0
-ncurses=6.4=h313beb8_0
-nest-asyncio=1.6.0=py311hca03da5_0
-nettle=3.9.1=h40ed0f5_0
-nodejs=20.17.0=hcd26c06_0
-notebook=7.2.2=py311hca03da5_1
-notebook-shim=0.2.3=py311hca03da5_0
-openh264=2.4.1=hebf3989_0
-openssl=3.3.2=h8359307_0
-overrides=7.4.0=py311hca03da5_0
-p11-kit=0.24.1=h29577a5_0
-packaging=24.1=py311hca03da5_0
-pandocfilters=1.5.0=pyhd3eb1b0_0
-parso=0.8.3=pyhd3eb1b0_0
-pcre2=10.43=h26f9a81_0
-pexpect=4.8.0=pyhd3eb1b0_3
-pip=24.2=py311hca03da5_0
-pixman=0.43.4=hebf3989_0
-platformdirs=3.10.0=py311hca03da5_0
-playwright=1.47.0=pypi_0
-ply=3.11=py311hca03da5_0
-prometheus_client=0.14.1=py311hca03da5_0
-prompt-toolkit=3.0.43=py311hca03da5_0
-prompt_toolkit=3.0.43=hd3eb1b0_0
-proto-plus=1.24.0=py311hca03da5_0
-protobuf=5.28.2=pypi_0
-psutil=5.9.0=py311h80987f9_0
-ptyprocess=0.7.0=pyhd3eb1b0_2
-pugixml=1.14=h13dd4ca_0
-pure_eval=0.2.2=pyhd3eb1b0_0
-pyasn1=0.4.8=pyhd3eb1b0_0
-pyasn1-modules=0.2.8=py_0
-pycparser=2.21=pyhd3eb1b0_0
-pycryptodomex=3.20.0=py311h460d6c5_1
-pydantic=2.9.2=pypi_0
-pydantic-core=2.23.4=pypi_0
-pyee=12.0.0=pypi_0
-pygments=2.15.1=py311hca03da5_1
-pyopenssl=24.2.1=py311hca03da5_0
-pyparsing=3.2.0=pypi_0
-pyqt=5.15.10=py311h313beb8_0
-pyqt5-sip=12.13.0=py311h80987f9_0
-pysocks=1.7.1=py311hca03da5_0
-python=3.11.8=hdf0ec26_0_cpython
-python-dateutil=2.9.0post0=py311hca03da5_2
-python-fastjsonschema=2.16.2=py311hca03da5_0
-python-json-logger=2.0.7=py311hca03da5_0
-python_abi=3.11=5_cp311
-pytz=2024.1=py311hca03da5_0
-pyyaml=6.0.2=py311h80987f9_0
-pyzmq=25.1.2=py311h313beb8_0
-qt-main=5.15.2=h0917680_10
-qtconsole=5.6.0=py311hca03da5_0
-qtpy=2.4.1=py311hca03da5_0
-readline=8.2=h1a28f6b_0
-referencing=0.30.2=py311hca03da5_0
-requests=2.32.3=py311hca03da5_0
-rfc3339-validator=0.1.4=py311hca03da5_0
-rfc3986-validator=0.1.1=py311hca03da5_0
-rpds-py=0.10.6=py311hf0e4da2_0
-rsa=4.7.2=pyhd3eb1b0_1
-send2trash=1.8.2=py311hca03da5_0
-setuptools=75.1.0=py311hca03da5_0
-sip=6.7.12=py311h313beb8_0
-six=1.16.0=pyhd3eb1b0_1
-snappy=1.2.1=h313beb8_0
-sniffio=1.3.0=py311hca03da5_0
-soupsieve=2.5=py311hca03da5_0
-sqlite=3.45.3=h80987f9_0
-stack_data=0.2.0=pyhd3eb1b0_0
-svt-av1=2.1.0=h7bae524_0
-tbb=2021.13.0=h7b3277c_0
-tenacity=9.0.0=pypi_0
-terminado=0.17.1=py311hca03da5_0
-tinycss2=1.2.1=py311hca03da5_0
-tk=8.6.14=h6ba3021_0
-tornado=6.4.1=py311h80987f9_0
-tqdm=4.66.5=pypi_0
-traitlets=5.14.3=py311hca03da5_0
-typing-extensions=4.11.0=py311hca03da5_0
-typing_extensions=4.11.0=py311hca03da5_0
-tzdata=2024b=h04d1e81_0
-uritemplate=4.1.1=pypi_0
-urllib3=2.2.3=py311hca03da5_0
-wcwidth=0.2.5=pyhd3eb1b0_0
-webencodings=0.5.1=py311hca03da5_1
-websocket-client=1.8.0=py311hca03da5_0
-websockets=13.1=py311h460d6c5_0
-wheel=0.44.0=py311hca03da5_0
-widgetsnbextension=4.0.10=py311hca03da5_0
-x264=1!164.3095=h57fd34a_2
-x265=3.5=hbc6ce65_3
-xz=5.4.6=h80987f9_1
-yaml=0.2.5=h1a28f6b_0
-yarl=1.11.0=py311h80987f9_0
-yt-dlp=2024.9.27=pyhd8ed1ab_0
-zeromq=4.3.5=h313beb8_0
-zlib=1.2.13=hfb2fe0b_6
-zstd=1.5.6=hfb09047_0
+aiofiles==22.1.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.2.0
+annotated-types==0.7.0
+anyio==4.6.2
+appnope==0.1.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+async-lru==2.0.4
+attrs==24.2.0
+Babel==2.11.0
+beautifulsoup4==4.12.3
+bleach==4.1.0
+Brotli==1.0.9
+brotlicffi==1.0.9.2
+cachetools==5.3.3
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+comm==0.2.1
+cryptography==43.0.0
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+executing==0.8.3
+fastjsonschema==2.16.2
+frozenlist==1.4.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.19.1
+google-api-python-client==2.149.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.63.2
+greenlet==3.0.3
+grpcio==1.67.0
+grpcio-status==1.67.0
+h11==0.14.0
+httpcore==1.0.2
+httplib2==0.22.0
+httpx==0.27.0
+idna==3.7
+ipykernel==6.29.5
+ipython==8.27.0
+ipywidgets==8.1.2
+jedi==0.19.1
+Jinja2==3.1.4
+json5==0.9.6
+jsonschema==4.23.0
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter_client==8.6.0
+jupyter-console==6.6.3
+jupyter_core==5.7.2
+jupyter-events==0.10.0
+jupyter-lsp==2.2.0
+jupyter_server==2.14.1
+jupyter_server_terminals==0.4.4
+jupyterlab==4.2.5
+jupyterlab-pygments==0.1.2
+jupyterlab_server==2.27.3
+jupyterlab-widgets==3.0.10
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mistune==2.0.4
+multidict==6.0.4
+mutagen==1.47.0
+nbclient==0.8.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+notebook==7.2.2
+notebook_shim==0.2.3
+overrides==7.4.0
+packaging==24.1
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pip==24.2
+platformdirs==3.10.0
+playwright==1.47.0
+ply==3.11
+prometheus-client==0.14.1
+prompt-toolkit==3.0.43
+proto-plus==1.24.0
+protobuf==5.28.2
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pycryptodomex==3.20.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+pyee==12.0.0
+Pygments==2.15.1
+pyOpenSSL==24.2.1
+pyparsing==3.2.0
+PyQt5==5.15.10
+PyQt5-sip==12.13.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytz==2024.1
+PyYAML==6.0.2
+pyzmq==25.1.2
+qtconsole==5.6.0
+QtPy==2.4.1
+referencing==0.30.2
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.10.6
+rsa==4.7.2
+Send2Trash==1.8.2
+setuptools==75.1.0
+sip==6.7.12
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.2.0
+tenacity==9.0.0
+terminado==0.17.1
+tinycss2==1.2.1
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+typing_extensions==4.11.0
+uritemplate==4.1.1
+urllib3==2.2.3
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==13.1
+wheel==0.44.0
+widgetsnbextension==4.0.10
+yarl==1.11.0
+yt-dlp==2024.9.27
